# Bulbmin-Puffmin

./: .dockerignore  .gitignore  Dockerfile  Puffmin.Dockerfile  README.md  fly.toml  globaltailwind.config.cjs  package-lock.json  package.json
.github/workflows/: fly-deploy.yml  tauri-build.yml
Bulbmin/: index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
Bulbmin/src/: App.svelte  main.ts  styles.css
Bulbmin/src-tauri/: Cargo.toml  tauri.conf.json
Bulbmin/src-tauri/capabilities/: desktop.json  migrated.json
Bulbmin/src-tauri/icons/: icon.icns
Bulbmin/src-tauri/src/: main.rs
Bulbmin/src/keyboardWindow/: Key.svelte  Keyboard.svelte  KeyboardApp.svelte  main.svelte.ts
Bulbmin/src/lib/: Card.svelte  Player.svelte  PlayersPage.svelte  Preset.svelte  PresetsPage.svelte  Settings.svelte  StringSettingsOption.svelte  TagsInput.svelte
Bulbmin/src/lib/toasts/: ToastContainer.svelte
Bulbmin/src/util/: connection.svelte.ts  connection.ts  fetchable.svelte.ts  fetchable.ts  input.ts  page.ts  presets.svelte.ts  presets.ts  settings.ts  sleep.ts  toast.svelte.ts  toast.ts  user.ts
BulbminWeb/: .env  index.html  package.json  tailwind.config.cjs  tsconfig.json
BulbminWeb/src/: App.svelte  app.css  connection.ts  fetchable.ts  input.ts  main.ts
BulbminWeb/src/lib/: ConnectionPage.svelte
Communication/: package.json
Communication/src/: connections.ts
Puffmin/: package.json  tsconfig.json
Puffmin/src/: clientWebsockets.ts  heartbeat.ts  index.ts  webWebsockets.ts  websockets.d.ts
