[package]
name = "bulbmin-control-panel"
version = "0.0.0"
description = "Bulbmin Control Panel"
authors = ["Mastriel"] # add yourself here if you're brave!
license = "AGPL-3.0"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.5", features = [] }

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dependencies]
tauri = { version = "1.4.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3.35"
rdev = "0.5.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
